<resources>
    <string name="app_name">ProjectJedi</string>
    <string name="sign_up">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Users">Users</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="reset">Reset</string>
</resources>
